Add: CSS styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Score: <div id="scoreBoard"></div>
         </div>
         <button id="start">Start</button>
-        <div id?="gameOver">Game Over</div>
+        <div id="gameOver">Game Over</div>
     </div>
 </body>
 </html>
